Contact Me section finished, alignments fixed, and links successfuly working and added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,21 +140,66 @@ a {
       position: static;
   }
 
-  #dMMP {
+.projectContainer {
       display: flex;
-      max-height: 40%;
-      max-width: 40%;
-      position: static;
+}
+
+.projectPictures {
+      flex: 30%;
+      padding: 10px;
+      margin: 0;
+}
+
+  #dMMP {
+      max-height: 150%;
+      max-width: 150%;
       border-radius: 10px;
-      align-self: center;
-      
+      margin-left: 5%;
+      border-width: 2%;
+  }
+
+  #yBP {
+      max-height: 75%;
+      max-width: 75%;
+      border-radius: 10px;
+      margin-left: 55%;
+      margin-top: 15%;
+  }
+
+  #bDM {
+      max-height: 75%;
+      max-width: 75%;
+      border-radius: 10px;
+      margin-left: 38%;
+      margin-top: 20%;
+  }
+
+  #mOF {
+      max-height: 75%;
+      max-width: 75%;
+      border-radius: 10px;
+      margin-left: 20%;
+      margin-top: 17%;
   }
 
 
-
+footer {
+      padding: 5%;
+      background-color: var(--midnight-green-eagle-green);
+      display: block;
+      border-radius: 10%;
+      margin-top: 5%;
+      max-height: 100%;
+      max-width: 100%;
+      justify-content: center;
+      position: static;
+      margin-bottom: 10%;
+      margin-left: 1%;
+      margin-right: 1%;
+}
 
   .footer h2 {
-      font-size: 2.4vw;
+      font-size: 3vw;
       padding: 2px;
       background-color: var(--dark-orange);
       border-width: 30px black;
@@ -162,6 +207,22 @@ a {
       border: 1px solid #CCC;
       text-align: center;
       border-radius: 10px;
-     
       position: static;
+  }
+
+  .contactsContainer{
+      display: flex;
+      font-size: 2vw;
+      padding: 0rem;
+      margin-top: 2rem;
+      margin-right: 1.5rem;
+  }
+
+  .contactsContainer ul li a {
+      color: rgb(255, 255, 255);
+}
+
+.contactsContainer ul li {
+      display: inline-block;
+      margin-left: 9.7rem;
   }
